[gd_scene load_steps=19 format=2]

[ext_resource path="res://Shop.gd" type="Script" id=1]
[ext_resource path="res://world/sky.tscn" type="PackedScene" id=2]
[ext_resource path="res://worlds/menu_world.tscn" type="PackedScene" id=3]
[ext_resource path="res://montserrat_eb_48.tres" type="DynamicFont" id=4]
[ext_resource path="res://icons/changeIcon.png" type="Texture" id=5]
[ext_resource path="res://players name.tres" type="DynamicFont" id=6]
[ext_resource path="res://tank/cannon_arm.png" type="Texture" id=7]
[ext_resource path="res://tank/blue_tank.png" type="Texture" id=8]
[ext_resource path="res://ammunition/horseBullet.png" type="Texture" id=9]
[ext_resource path="res://ammunition/baguette.png" type="Texture" id=10]
[ext_resource path="res://ammunition/sniperBullet.png" type="Texture" id=11]
[ext_resource path="res://ammunition/fatMan.png" type="Texture" id=12]
[ext_resource path="res://ammunition/atomBullet.png" type="Texture" id=13]
[ext_resource path="res://items/fuel_canister.png" type="Texture" id=14]
[ext_resource path="res://icons/scorched earth remastered.png" type="Texture" id=15]

[sub_resource type="DynamicFontData" id=1]

font_path = "res://Montserrat-ExtraBold.ttf"

[sub_resource type="DynamicFont" id=2]

size = 25
use_mipmaps = true
use_filter = true
font_data = SubResource( 1 )

[sub_resource type="DynamicFont" id=3]

size = 28
outline_size = 3
outline_color = Color( 0.972549, 0.0352941, 0.0352941, 1 )
use_mipmaps = true
use_filter = true
font_data = SubResource( 1 )

[node name="Shop" type="Node2D" groups=[
"SaveFiles",
]]
script = ExtResource( 1 )

[node name="Background" type="Container" parent="."]
margin_right = 1280.0
margin_bottom = 720.0

[node name="sky" parent="Background" instance=ExtResource( 2 )]

[node name="menu_world" parent="Background" instance=ExtResource( 3 )]
position = Vector2( 0, 100 )

[node name="Menu" type="Node2D" parent="."]
editor/display_folded = true

[node name="Background" type="ColorRect" parent="Menu"]
margin_left = 125.0
margin_top = 100.0
margin_right = 1155.0
margin_bottom = 620.0
color = Color( 0.2, 0.203922, 0.286275, 1 )

[node name="Shop" type="Label" parent="Menu"]
margin_left = 150.0
margin_top = 110.0
margin_right = 1130.0
margin_bottom = 162.0
rect_pivot_offset = Vector2( -148.787, -152.925 )
custom_fonts/font = ExtResource( 4 )
text = "Shop"
align = 1
valign = 1

[node name="InfoRight" type="Container" parent="."]
editor/display_folded = true
margin_left = 640.0
margin_top = 165.0
margin_right = 1155.0
margin_bottom = 620.0
rect_min_size = Vector2( 0, 455 )

[node name="AmmunitionOrItem" type="Button" parent="InfoRight"]
margin_left = 50.0
margin_top = 189.0
margin_right = 102.0
margin_bottom = 241.0
icon = ExtResource( 5 )

[node name="Ready" type="Button" parent="InfoRight"]
margin_left = 50.0
margin_top = 250.0
margin_right = 250.0
margin_bottom = 294.0
custom_fonts/font = ExtResource( 6 )
text = "Ready"

[node name="currentPlayer" type="Label" parent="InfoRight"]
margin_left = 200.0
margin_top = 50.0
margin_right = 500.0
margin_bottom = 102.0
rect_pivot_offset = Vector2( -0.204041, -1.73648 )
custom_fonts/font = ExtResource( 4 )
text = "Player1"

[node name="currentMoney" type="Label" parent="InfoRight"]
margin_left = 200.0
margin_top = 105.0
margin_right = 500.0
margin_bottom = 143.0
custom_fonts/font = SubResource( 2 )
text = "200$"

[node name="notEnoughMoney" type="Label" parent="InfoRight"]
visible = false
margin_left = 193.21
margin_top = 198.42
margin_right = 493.21
margin_bottom = 234.42
custom_fonts/font = SubResource( 3 )
text = "Not enough money!"

[node name="noMoneyTimer" type="Timer" parent="InfoRight"]
wait_time = 1.5
one_shot = true

[node name="cannon" type="Sprite" parent="InfoRight"]
position = Vector2( 70.7675, 88.9134 )
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 7 )
offset = Vector2( 43.8516, 4.26726 )

[node name="tankColor" type="Sprite" parent="InfoRight"]
position = Vector2( 50, 85 )
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 8 )
offset = Vector2( 43.8516, 4.26726 )

[node name="ItemsLeft" type="Container" parent="."]
editor/display_folded = true
margin_left = 150.0
margin_top = 165.0
margin_right = 665.0
margin_bottom = 620.0
rect_min_size = Vector2( 0, 455 )

[node name="Ammunition" type="Container" parent="ItemsLeft"]
margin_top = 50.0
margin_right = 515.0
margin_bottom = 505.0
rect_min_size = Vector2( 0, 455 )

[node name="horseBullet" type="Button" parent="ItemsLeft/Ammunition"]
editor/display_folded = true
margin_right = 515.0
margin_bottom = 30.0

[node name="Price" type="Label" parent="ItemsLeft/Ammunition/horseBullet"]
margin_left = 80.0
margin_top = 1.0
margin_right = 180.0
margin_bottom = 27.0
custom_fonts/font = ExtResource( 6 )
text = "1300$"
align = 2
valign = 1

[node name="Amount" type="Label" parent="ItemsLeft/Ammunition/horseBullet"]
margin_left = -0.6
margin_top = 1.0
margin_right = 31.4
margin_bottom = 27.0
custom_fonts/font = ExtResource( 6 )
text = "0"
align = 2
valign = 1

[node name="Name" type="Label" parent="ItemsLeft/Ammunition/horseBullet"]
margin_left = 160.0
margin_top = 1.0
margin_right = 486.0
margin_bottom = 27.0
custom_fonts/font = ExtResource( 6 )
text = "Horse"
align = 2
valign = 1

[node name="icon" type="Sprite" parent="ItemsLeft/Ammunition/horseBullet"]
position = Vector2( 63.961, 14.738 )
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 9 )
offset = Vector2( 9.95053, 10.0572 )

[node name="frenchBullet" type="Button" parent="ItemsLeft/Ammunition"]
editor/display_folded = true
margin_top = 35.0
margin_right = 515.0
margin_bottom = 65.0

[node name="Amount" type="Label" parent="ItemsLeft/Ammunition/frenchBullet"]
margin_left = -0.6
margin_right = 31.4
margin_bottom = 26.0
custom_fonts/font = ExtResource( 6 )
text = "0"
align = 2
valign = 1

[node name="Price" type="Label" parent="ItemsLeft/Ammunition/frenchBullet"]
margin_left = 80.0
margin_top = 1.0
margin_right = 180.0
margin_bottom = 27.0
custom_fonts/font = ExtResource( 6 )
text = "1700$"
align = 2
valign = 1

[node name="Name" type="Label" parent="ItemsLeft/Ammunition/frenchBullet"]
margin_left = 160.0
margin_top = 1.0
margin_right = 486.0
margin_bottom = 27.0
custom_fonts/font = ExtResource( 6 )
text = "Baguette"
align = 2
valign = 1

[node name="icon" type="Sprite" parent="ItemsLeft/Ammunition/frenchBullet"]
position = Vector2( 67.791, 10.858 )
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 10 )
offset = Vector2( 9.95053, 10.0572 )

[node name="sniperBullet" type="Button" parent="ItemsLeft/Ammunition"]
editor/display_folded = true
margin_top = 70.0
margin_right = 515.0
margin_bottom = 100.0

[node name="Amount" type="Label" parent="ItemsLeft/Ammunition/sniperBullet"]
margin_left = -0.6
margin_right = 31.4
margin_bottom = 26.0
custom_fonts/font = ExtResource( 6 )
text = "0"
align = 2
valign = 1

[node name="Price" type="Label" parent="ItemsLeft/Ammunition/sniperBullet"]
margin_left = 80.0
margin_top = 1.0
margin_right = 180.0
margin_bottom = 27.0
custom_fonts/font = ExtResource( 6 )
text = "5300$"
align = 2
valign = 1

[node name="Name" type="Label" parent="ItemsLeft/Ammunition/sniperBullet"]
margin_left = 160.0
margin_top = 1.0
margin_right = 486.0
margin_bottom = 27.0
custom_fonts/font = ExtResource( 6 )
text = "Sniper"
align = 2
valign = 1

[node name="icon2" type="Sprite" parent="ItemsLeft/Ammunition/sniperBullet"]
position = Vector2( 73.431, 18.058 )
rotation = 0.0872664
scale = Vector2( 0.15, 0.15 )
texture = ExtResource( 11 )
offset = Vector2( 9.95053, 10.0572 )

[node name="icon" type="Sprite" parent="ItemsLeft/Ammunition/sniperBullet"]
position = Vector2( 64.421, 13.328 )
rotation = -0.244346
scale = Vector2( 0.15, 0.15 )
texture = ExtResource( 11 )
offset = Vector2( 9.95053, 10.0572 )

[node name="atomBullet" type="Button" parent="ItemsLeft/Ammunition"]
editor/display_folded = true
margin_top = 105.0
margin_right = 515.0
margin_bottom = 135.0

[node name="Amount" type="Label" parent="ItemsLeft/Ammunition/atomBullet"]
margin_left = -0.6
margin_right = 31.4
margin_bottom = 26.0
custom_fonts/font = ExtResource( 6 )
text = "0"
align = 2
valign = 1

[node name="Price" type="Label" parent="ItemsLeft/Ammunition/atomBullet"]
margin_left = 80.0
margin_top = 1.0
margin_right = 180.0
margin_bottom = 27.0
custom_fonts/font = ExtResource( 6 )
text = "5700$"
align = 2
valign = 1

[node name="Name" type="Label" parent="ItemsLeft/Ammunition/atomBullet"]
margin_left = 160.0
margin_top = 1.0
margin_right = 486.0
margin_bottom = 27.0
custom_fonts/font = ExtResource( 6 )
text = "Nuke"
align = 2
valign = 1

[node name="icon" type="Sprite" parent="ItemsLeft/Ammunition/atomBullet"]
position = Vector2( 70.631, 12.898 )
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 12 )
offset = Vector2( 9.95053, 10.0572 )

[node name="icon2" type="Sprite" parent="ItemsLeft/Ammunition/atomBullet"]
position = Vector2( 75.671, 8.748 )
scale = Vector2( 0.8, 0.8 )
texture = ExtResource( 13 )
offset = Vector2( 9.95053, 10.0572 )

[node name="Items" type="Container" parent="ItemsLeft"]
visible = false
margin_right = 515.0
margin_bottom = 455.0
rect_min_size = Vector2( 0, 455 )

[node name="fuelCanister" type="Button" parent="ItemsLeft/Items"]
margin_top = 50.0
margin_right = 515.0
margin_bottom = 80.0

[node name="Price" type="Label" parent="ItemsLeft/Items/fuelCanister"]
margin_left = 100.0
margin_top = 1.0
margin_right = 200.0
margin_bottom = 27.0
custom_fonts/font = ExtResource( 6 )
text = "1500$"
align = 2
valign = 1

[node name="Amount" type="Label" parent="ItemsLeft/Items/fuelCanister"]
margin_left = -1.0
margin_top = 1.0
margin_right = 57.0
margin_bottom = 27.0
custom_fonts/font = ExtResource( 6 )
text = "0"
align = 2
valign = 1

[node name="Name" type="Label" parent="ItemsLeft/Items/fuelCanister"]
margin_left = 189.0
margin_top = 1.0
margin_right = 486.0
margin_bottom = 27.0
custom_fonts/font = ExtResource( 6 )
text = "Fuel [100]"
align = 2
valign = 1

[node name="icon" type="Sprite" parent="ItemsLeft/Items/fuelCanister"]
position = Vector2( 84, 10.748 )
scale = Vector2( 0.45, 0.4 )
texture = ExtResource( 14 )
offset = Vector2( 9.95053, 10.0572 )

[node name="Title" type="Sprite" parent="."]
position = Vector2( 1112.65, 47.97 )
scale = Vector2( 1, 1.2 )
texture = ExtResource( 15 )

[connection signal="pressed" from="InfoRight/AmmunitionOrItem" to="." method="_on_AmmunitionOrItem_pressed"]
[connection signal="pressed" from="InfoRight/Ready" to="." method="_on_Ready_pressed"]
[connection signal="timeout" from="InfoRight/noMoneyTimer" to="." method="_on_noMoneyTimer_timeout"]
[connection signal="pressed" from="ItemsLeft/Ammunition/horseBullet" to="." method="_on_horseBullet_pressed"]
[connection signal="pressed" from="ItemsLeft/Ammunition/frenchBullet" to="." method="_on_frenchBullet_pressed"]
[connection signal="pressed" from="ItemsLeft/Ammunition/sniperBullet" to="." method="_on_sniperBullet_pressed"]
[connection signal="pressed" from="ItemsLeft/Ammunition/atomBullet" to="." method="_on_atomBullet_pressed"]
[connection signal="pressed" from="ItemsLeft/Items/fuelCanister" to="." method="_on_fuelCanister_pressed"]
